--- a/index.html
+++ b/index.html
@@ -99,25 +99,25 @@
           <br/>
           <a id="Facebook" onClick="Facebook()">
             <div class="Facebook">
-              <i class="bi bi-facebook">&nbsp; </i>Facebook (507K+)
+              <i class="bi bi-facebook">&nbsp; </i>Facebook (1K+)
             </div>
           </a>
           <br/>
           <a id="Youtube" onClick="Youtube()">
             <div class="Youtube">
-              <i class="bi bi-youtube">&nbsp; </i>Youtube (3K+)
+              <i class="bi bi-youtube">&nbsp; </i>Youtube (1K+)
             </div>
           </a>
           <br/>
           <a id="Discord" onClick="Discord()">
             <div class="Discord">
-              <i class='bi bi-discord'>&nbsp; </i>Discord (800+)
+              <i class='bi bi-discord'>&nbsp; </i>Discord (1K+)
             </div>
           </a>
           <br/>
           <a id="Instagram" onClick="Instagram()">
             <div class="Instagram">
-              <i class="bi bi-instagram">&nbsp; </i>Instagram (7+)
+              <i class="bi bi-instagram">&nbsp; </i>Instagram (1K+)
             </div>
           </a>
           <br/>
