--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <div class="BlurWebs">
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
+                <!-- thẻ mở tab mới khi click vào
+          <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
         <a style="font-family: 'Concert One'; color:rgb(255, 0, 0);">
           <span id="fps">60.0</span> FPS </a>
       </div>
