--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
                           <a id="Weather" onClick="window.open('https://nhan2k5.github.io/weather_app/');">Weather App</a>        
+                          <a id="2048" onClick="window.open('https://nhan2k5.github.io/_2048/');">2048</a>
         <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
         <a style="font-family: 'Concert One'; color:rgb(255, 0, 0);">
