--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       // ADD SOUND NHẠC TẠI ĐÂY
 const ThanhDieu_List_Sounds = [
 "//thanhdieu.com/files/Qua-khu-anh-khong-the-quen.mp3",
-"//thanhdieu.com/files/Nhat-Tren-Doi.mp3",
+"music/y2mate.com - Stereo love remix Vinahouse Levis x HT Music nhạc hot tik tok 2023 .mp3",
 "//thanhdieu.com/files/Cung-Anh.mp3",
 "//thanhdieu.com/files/Nhu-Anh-Da-Thay-Em.mp3",
 ];
