--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
 const ThanhDieu_List_Sounds = [
 "//thanhdieu.com/files/Qua-khu-anh-khong-the-quen.mp3",
 "music/y2mate.com - Stereo love remix Vinahouse Levis x HT Music nhạc hot tik tok 2023 .mp3",
-"//thanhdieu.com/files/Cung-Anh.mp3",
-"//thanhdieu.com/files/Nhu-Anh-Da-Thay-Em.mp3",
+"music/y2mate.com - anh thấy đôi vai cô lạnh remix.mp3",
+"music/y2mate.com - Gió x Đom Đóm Mashup  JanK ft Jack  J97Cukak Remix Audio Lyrics Video.mp3",
 ];
 // EDIT TEXT ALERT TẠI ĐÂY
 function HomeThanhDieu() {
