--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       // ADD SOUND NHẠC TẠI ĐÂY
 const ThanhDieu_List_Sounds = [
 "//thanhdieu.com/files/Qua-khu-anh-khong-the-quen.mp3",
-"music/y2mate.com - Stereo love remix Vinahouse Levis x HT Music nhạc hot tik tok 2023 .mp3",
+"y2mate.com - Stereo love remix Vinahouse Levis x HT Music nhạc hot tik tok 2023 .mp3",
 "music/y2mate.com - anh thấy đôi vai cô lạnh remix.mp3",
 "The Hills x Where Have You Been TVT x Thereon Remix Nhạc Hot Tiktok 2023 LQ Music.mp3",
 ];
