--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@
       // ADD SOUND NHẠC TẠI ĐÂY
 const ThanhDieu_List_Sounds = [
 "//thanhdieu.com/files/Qua-khu-anh-khong-the-quen.mp3",
-"y2mate.com - Stereo love remix Vinahouse Levis x HT Music nhạc hot tik tok 2023 .mp3",
+"//thanhdieu.com/files/Nhat-Tren-Doi.mp3",
 "music/y2mate.com - anh thấy đôi vai cô lạnh remix.mp3",
-"The Hills x Where Have You Been TVT x Thereon Remix Nhạc Hot Tiktok 2023 LQ Music.mp3",
+"//thanhdieu.com/files/Nhu-Anh-Da-Thay-Em.mp3",
 ];
 // EDIT TEXT ALERT TẠI ĐÂY
 function HomeThanhDieu() {
