--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="BlurWebs">
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
-     
+                   <a id="menja" onClick="window.open('https://nhan2k5.github.io/menja/');">MENJA-GAME</a>
         <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
         <a style="font-family: 'Concert One'; color:rgb(255, 0, 0);">
