--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       // ADD SOUND NHẠC TẠI ĐÂY
 const ThanhDieu_List_Sounds = [
 "//thanhdieu.com/files/Qua-khu-anh-khong-the-quen.mp3",
-"whoopty.mp3",
+"music/whoopty.mp3",
 "music/y2mate.com - anh thấy đôi vai cô lạnh remix.mp3",
 "//thanhdieu.com/files/Nhu-Anh-Da-Thay-Em.mp3",
 ];
