--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="BlurWebs">
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
-                   
+                <a id="ChatGpt" onClick="window.open('chat-gpt/index.html');">FORUM</a>   
         <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
         <a style="font-family: 'Concert One'; color:rgb(255, 0, 0);">
