--- a/chat-gpt/index.html
+++ b/chat-gpt/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>NGUYEN DINH NHAN - Chat-Gpt</title>
+    <title>NGUYEN DINH NHAN - ChatGpt</title>
     <link rel="shortcut icon" href="https://i.ibb.co/4pB5tKz/FB-IMG-1678099032382.jpg" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
