--- a/chat-gpt/index.html
+++ b/chat-gpt/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - www.codingnepalweb.com -->
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>NGUYEN DINH NHAN - ChatGpt</title>
-    <link rel="shortcut icon" href="https://i.ibb.co/4pB5tKz/FB-IMG-1678099032382.jpg" type="image/x-icon">
+<html lang="en">
 
-    <link rel="stylesheet" href="style.css">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Fonts Link For Icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://nhanpro.w3spaces.com/script.js" defer></script>
-  </head>
-  <body>
-    <!-- Chats container -->
-    <div class="chat-container"></div>
-    
-    <!-- Typing container -->
-    <div class="typing-container">
-      <div class="typing-content">
-        <div class="typing-textarea">
-          <textarea id="chat-input" spellcheck="false" placeholder="Enter a prompt here" required></textarea>
-          <span id="send-btn" class="material-symbols-rounded">send</span>
+
+    <title>NGUYEN DINH NHAN - ChatGPT</title>
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="header">
+            <h3> ChatGPT Bot</h3>
         </div>
-        <div class="typing-controls">
-          <span id="theme-btn" class="material-symbols-rounded">light_mode</span>
-          <span id="delete-btn" class="material-symbols-rounded">delete</span>
-      </div>
+
+        <div class="info">
+            <a href="https://Youtube.com/@AsmrProg" target="_blank">
+                "Ask me anything"
+            </a>
+        </div>
+
+        <div class="chat-container">
+            <div id="chat-log"></div>
+        </div>
+
+        <div class="input-container">
+            <input type="text" id="user-input" placeholder="Send a message.">
+            <button id="send-button">
+                <i class="fa-solid fa-paper-plane" id="button-icon"></i>
+            </button>
+        </div>
+
     </div>
 
-  </body>
+
+
+</body>
+
 </html>
