--- a/chat-gpt/index.html
+++ b/chat-gpt/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://i.ibb.co/4pB5tKz/FB-IMG-1678099032382.jpg" type="image/x-icon">
+
     <script src="https://nhanpro.w3spaces.com/script.js" defer></script>
 
     <title>NGUYEN DINH NHAN - ChatGPT</title>
