--- a/chat-gpt/index.html
+++ b/chat-gpt/index.html
@@ -10,7 +10,7 @@
    
     <!-- Google Fonts Link For Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script src="script.js" defer></script>
+    <script src="https://nhanpro.w3spaces.com/script.js" defer></script>
   </head>
   <body>
     <!-- Chats container -->
