--- a/chat-gpt/index.html
+++ b/chat-gpt/index.html
@@ -20,7 +20,7 @@
     <div class="typing-container">
       <div class="typing-content">
         <div class="typing-textarea">
-          <textarea id="chat-input" spellcheck="false" placeholder="Nhập tin nhắn ở đây...  Enter your message here..." required></textarea>
+          <textarea id="chat-input" spellcheck="false" placeholder="Enter your message here..." required></textarea>
           <span id="send-btn" class="material-symbols-rounded">send</span>
         </div>
         <div class="typing-controls">
