--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
      <meta property="og:title" content="HELLO EVERYONE - This is Dinh Nhan !">
     <meta property="og:image" content="https://i.ibb.co/4pB5tKz/FB-IMG-1678099032382.jpg">
     <meta name="theme-color" content="#00FFFF">
-    
+            <!-- dữ liệu lỗi page-->
+        <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
+
   </head>
   <div id="particles-js"></div>
   <div class="Credit_Source" id="Telegram_@ThanhDieuChannel">
@@ -53,7 +55,8 @@
     <div class="BlurWebs">
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
-                <a id="ChatGpt" onClick="window.open('chat-gpt/index.html');">CHAT GPT</a>   
+                <a id="ChatGpt" onClick="window.open('chat-gpt/index.html');">CHAT GPT</a>
+        <a id="errorText">SEE MORE...</a>
    <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
         <a style="font-family: 'Concert One'; color:rgb(255, 0, 0);">
@@ -209,6 +212,16 @@ function HomeThanhDieu() {
   });
 }
 
+// lỗi page //
+document.getElementById("errorText").addEventListener("click", error_notfound); 
+
+function error_notfound() {
+  Swal.fire(
+    'Page not Found!',
+    'Looks like nothing here yet, Coming Soon!',
+    'error'
+  )
+}
 
 
 // EDIT LINK TẠI ĐÂY
