--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
           </div>
           <div class="skill">
-            <div class="skill-name">C/C++</div>
+            <div class="skill-name">PHP</div>
             <div class="skill-bar">
               <div class="skill-per color3" per="4"></div>
             </div>
@@ -162,7 +162,7 @@
       <div class="col-lg-6 col-12">
         <div class="skill-box">
           <div class="skill">
-            <div class="skill-name">Python</div>
+            <div class="skill-name">React</div>
             <div class="skill-bar">
               <div class="skill-per color1" per="22"></div>
             </div>
