--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
      <meta property="og:title" content="HELLO EVERYONE - This is Dinh Nhan !">
     <meta property="og:image" content="https://i.ibb.co/4pB5tKz/FB-IMG-1678099032382.jpg">
     <meta name="theme-color" content="#00FFFF">
-            <!-- dữ liệu lỗi page-->
-        <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
-
+            
   </head>
   <div id="particles-js"></div>
   <div class="Credit_Source" id="Telegram_@ThanhDieuChannel">
@@ -56,7 +54,7 @@
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
                 <a id="ChatGpt" onClick="window.open('chat-gpt/index.html');">CHAT GPT</a>
-        <a id="errorText">SEE MORE...</a>
+        
    <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
         <a style="font-family: 'Concert One'; color:rgb(255, 0, 0);">
@@ -162,13 +160,13 @@
       <div class="col-lg-6 col-12">
         <div class="skill-box">
           <div class="skill">
-            <div class="skill-name">React</div>
+            <div class="skill-name">PYTHON</div>
             <div class="skill-bar">
               <div class="skill-per color1" per="22"></div>
             </div>
           </div>
           <div class="skill">
-            <div class="skill-name">Javascript</div>
+            <div class="skill-name">JAVASCRIPT</div>
             <div class="skill-bar">
               <div class="skill-per color2" per="16"></div>
             </div>
@@ -212,16 +210,6 @@ function HomeThanhDieu() {
   });
 }
 
-// lỗi page //
-document.getElementById("errorText").addEventListener("click", error_notfound); 
-
-function error_notfound() {
-  Swal.fire(
-    'Page not Found!',
-    'Looks like nothing here yet, Coming Soon!',
-    'error'
-  )
-}
 
 
 // EDIT LINK TẠI ĐÂY
