--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -52,7 +52,7 @@
     </div>
 
     <script src="https://kit.fontawesome.com/7c8801c017.js" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="https://nhanpro.w3spaces.com/main.js"></script>
 </body>
 
 </html>
