--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
                 <a id="ChatGpt" onClick="window.open('chat-gpt/index.html');">CHAT GPT</a>
+        <a id="wetherapp" onClick="window.open('weather-app/index.html');">WEATHER</a>
         
    <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
