--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -9,7 +9,9 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Day #10 - Weather App | AsmrProg</title>
+    <link rel="shortcut icon" href="https://freepngimg.com/thumb/weather/23527-3-weather.png" type="image/x-icon">
+  
+    <title> Weather App </title>
 </head>
 
 <body>
