--- a/chat-gpt/index.html
+++ b/chat-gpt/index.html
@@ -3,7 +3,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>NGUYEN DINH NHAN - ChatGPT</title>
+    <title>Chatbot Clone</title>
+    <link rel="shortcut icon" href="https://media.istockphoto.com/id/1010001882/vector/ððµñðññ.jpg?s=612x612&w=0&k=20&c=1jeAr9KSx3sG7SKxUPR_j8WPSZq_NIKL0P-MA4F1xRw=" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="shortcut icon" href="https://i.ibb.co/4pB5tKz/FB-IMG-1678099032382.jpg" type="image/x-icon">
