--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="BlurWebs">
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
-                <a id="ChatGpt" onClick="window.open('chat-gpt/index.html');">CHAT GPT</a>
+                <a id="Chatbot" onClick="window.open('chat-gpt/index.html');">CHATBOT</a>
         <a id="wetherapp" onClick="window.open('weather-app/index.html');">WEATHER</a>
         
    <!-- thẻ mở tab mới khi click vào
