--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
     <script text="type/javascript">
       // ADD SOUND NHẠC TẠI ĐÂY
 const ThanhDieu_List_Sounds = [
-"//thanhdieu.com/files/Qua-khu-anh-khong-the-quen.mp3",
-"music/The Hills Where Have You Been.mp3",
+"music/100 YEARS LOVE Ver 2 AnhVu Remix NHẠC HOT TIK TOK SHARK REMIX .mp3",
+"music/Khi Nỗi Đau Quá Lớn Remix RKT NHẠC HOT TIK TOK SHARK REMIX .mp3",
 "music/y2mate.com - anh thấy đôi vai cô lạnh remix.mp3",
 "//thanhdieu.com/files/Nhu-Anh-Da-Thay-Em.mp3",
 ];
