--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <script text="type/javascript">
       // ADD SOUND NHẠC TẠI ĐÂY
 const ThanhDieu_List_Sounds = [
-"music/100 YEARS LOVE Ver 2 AnhVu Remix NHẠC HOT TIK TOK SHARK REMIX .mp3",
+"/music/100 YEARS LOVE Ver 2 AnhVu Remix NHẠC HOT TIK TOK SHARK REMIX .mp3",
 "music/Khi Nỗi Đau Quá Lớn Remix RKT NHẠC HOT TIK TOK SHARK REMIX .mp3",
 "music/y2mate.com - anh thấy đôi vai cô lạnh remix.mp3",
 "//thanhdieu.com/files/Nhu-Anh-Da-Thay-Em.mp3",
