--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="DinhNhanGithubIo">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="shortcut icon" href="https://i.ibb.co/4pB5tKz/FB-IMG-1678099032382.jpg" type="image/x-icon">
-    <title>NGUYEN DINH NHAN - HOME</title>
+    <title>Nguyễn Đình Nhân </title>
     <link rel="stylesheet" href="./thanhdieuft-data/css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pattaya|Potta One|Rowdies|Braah One|Monomaniac One">
@@ -197,8 +197,8 @@
     <script text="type/javascript">
       // ADD SOUND NHẠC TẠI ĐÂY
 const ThanhDieu_List_Sounds = [
-"./music/100 YEARS LOVE Ver 2 AnhVu Remix NHẠC HOT TIK TOK SHARK REMIX .mp3",
-"./music/Khi Nỗi Đau Quá Lớn Remix RKT NHẠC HOT TIK TOK SHARK REMIX .mp3",
+"music/100 YEARS LOVE Ver 2 AnhVu Remix NHẠC HOT TIK TOK SHARK REMIX .mp3",
+"music/Khi Nỗi Đau Quá Lớn Remix RKT NHẠC HOT TIK TOK SHARK REMIX .mp3",
 "music/y2mate.com - anh thấy đôi vai cô lạnh remix.mp3",
 "//thanhdieu.com/files/Nhu-Anh-Da-Thay-Em.mp3",
 ];
