--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
                 <a id="Chatbot" onClick="window.open('chat-gpt/index.html');">CHATBOT</a>
         <a id="wetherapp" onClick="window.open('weather-app/index.html');">WEATHER</a>
+        <a id="downloadyt" onClick="window.open('https://downloadvideo-youtube.vercel.app/');">DownloadVideoYoutube</a>
         
    <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
