--- a/tools/tools.html
+++ b/tools/tools.html
@@ -26,7 +26,7 @@
       <p class="textsub">Click how to use for more details</p>
       <div class="buttons">
         <button class="how-to-use-btn"data-popup="popup1">How to Use?</button>
-        <a href="https://nhan2k5.github.io/weather-app/index.html" class="use-now-btn">Use now <i class='bx bx-send'></i></a>
+        <a href="weather-app/index.html" class="use-now-btn">Use now <i class='bx bx-send'></i></a>
       </div>
     </div>
     <div class="card">
@@ -34,7 +34,7 @@
       <p class="textsub">Click how to use for more details.</p>
       <div class="buttons">
         <button class="how-to-use-btn"data-popup="popup2">How to Use?</button>
-        <a href="https://nhan2k5.github.io/chat-gpt/index.html" class="use-now-btn">Use now <i class='bx bx-send'></i></a>
+        <a href="chat-gpt/index.html" class="use-now-btn">Use now <i class='bx bx-send'></i></a>
       </div>
     </div>
   </div>
