--- a/tools/tools.html
+++ b/tools/tools.html
@@ -26,7 +26,8 @@
       <p class="textsub">Click how to use for more details</p>
       <div class="buttons">
         <button class="how-to-use-btn"data-popup="popup1">How to Use?</button>
-        <a href="./weather-app/index.html" class="use-now-btn">Use now <i class='bx bx-send'></i></a>
+       <a id="weather" onClick="window.open('nhan2k5.github.io/weather-app/index.html');"
+ class="use-now-btn" >Use now <i class='bx bx-send'></i></a>
       </div>
     </div>
     <div class="card">
@@ -34,7 +35,7 @@
       <p class="textsub">Click how to use for more details.</p>
       <div class="buttons">
         <button class="how-to-use-btn"data-popup="popup2">How to Use?</button>
-        <a href="./chat-gpt/index.html" class="use-now-btn">Use now <i class='bx bx-send'></i></a>
+       <a id="chatbot" onClick="window.open('nhan2k5.github.io/chat-gpt/index.html');" class="use-now-btn">Use now <i class='bx bx-send'></i></a>
       </div>
     </div>
   </div>
