--- a/tools/tools.html
+++ b/tools/tools.html
@@ -26,7 +26,7 @@
       <p class="textsub">Click how to use for more details</p>
       <div class="buttons">
         <button class="how-to-use-btn"data-popup="popup1">How to Use?</button>
-       <a id="weather" onClick="window.open('https://nhan2k5.github.io/weather-app/index.html');"
+       <a id="weather" onClick="window.open('tools/weather-app/weather.html');"
  class="use-now-btn" >Use now <i class='bx bx-send'></i></a>
       </div>
     </div>
@@ -35,7 +35,7 @@
       <p class="textsub">Click how to use for more details.</p>
       <div class="buttons">
         <button class="how-to-use-btn"data-popup="popup2">How to Use?</button>
-       <a id="chatbot" onClick="window.open('https://nhan2k5.github.io/chat-gpt/index.html');" class="use-now-btn">Use now <i class='bx bx-send'></i></a>
+       <a id="chatbot" onClick="window.open('tools/chat-bot/chat.html');" class="use-now-btn">Use now <i class='bx bx-send'></i></a>
       </div>
     </div>
   </div>
