--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
      <meta property="og:title" content="HELLO EVERYONE - This is Dinh Nhan !">
     <meta property="og:image" content="https://i.ibb.co/4pB5tKz/FB-IMG-1678099032382.jpg">
     <meta name="theme-color" content="#00FFFF">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />       
+    <!--==link font icon ngôn ngữ lập trình==-->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+         <!-- Google Fonts Link For Icons Chatbot-->
+         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
+         <script src="https://nhanpro.w3spaces.com/chatbot.js" defer></script>
   </head>
   <div id="particles-js"></div>
   <div class="Credit_Source" id="Telegram_@ThanhDieuChannel">
@@ -234,6 +239,29 @@ function Instagram() {
 }
     </script>
     </div>
+    
+        <!--===<!-- Coding By CodingNepal - www.codingnepalweb.com ==-->
+        <button class="chatbot-toggler">
+          <span class="material-symbols-rounded">mode_comment</span>
+          <span class="material-symbols-outlined">close</span>
+        </button>
+        <div class="chatbot">
+          <header>
+            <h2>Chatbot</h2>
+            <span class="close-btn material-symbols-outlined">close</span>
+          </header>
+          <ul class="chatbox">
+            <li class="chat incoming">
+              <span class="material-symbols-outlined">smart_toy</span>
+              <p>Hi there 👋<br>How can I help you today?</p>
+            </li>
+          </ul>
+          <div class="chat-input">
+            <textarea placeholder="Enter a message..." spellcheck="false" required></textarea>
+            <span id="send-btn" class="material-symbols-rounded">send</span>
+          </div>
+        </div>
+    <!---->
     <script src="./thanhdieuft-data/js/particles.js"></script>
     <script src="./thanhdieuft-data/js/app.js"></script>
     <script src='./thanhdieuft-data/js/jquery.min.js'></script>
