--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+ 
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -253,7 +253,7 @@ function Instagram() {
           <ul class="chatbox">
             <li class="chat incoming">
               <span class="material-symbols-outlined">smart_toy</span>
-              <p>Hi there 👋<br>How can I help you today?</p>
+              <p>Xin Chào 👋<br>Tôi có thể giúp gì cho bạn?</p>
             </li>
           </ul>
           <div class="chat-input">
