--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <div class="BlurWebs">
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
+        <a id="Tools" onClick="window.open('Tools/index.html', '_nothing');">TOOLS</a>      
+     
    <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
         <a style="font-family: 'Concert One'; color:rgb(255, 0, 0);">
