--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="BlurWebs">
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
-        <a id="Tools" onClick="window.open('Tools/index.html', '_nothing');">TOOLS</a>      
+        <a href="Tools/index.html">TOOLS</a>      
         <a href="//nhan2k5.github.io/404_not_found/index.html">GAMES<a>
    <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
