--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
         <a href="Tools/index.html">TOOLS</a>      
-        <a href="//nhan2k5.github.io/404_not_found/index.html">GAMES<a>
+        <a href="404_not_found/index.html">GAMES<a>
    <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
         <a style="font-family: 'Concert One'; color:rgb(255, 0, 0);">
