--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
         <a href="Tools/index.html">TOOLS</a>      
         <a href="404_not_found/index.html">GAMES<a>
-   <!-- thẻ mở tab mới khi click vào
-          <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>      -->
+   <!-- thẻ mở tab mới khi click vào -->
+          <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>
+          <!-- thẻ mở tab mới khi click vào -->
         <a style="font-family: 'Concert One'; color:rgb(255, 0, 0);">
           <span id="fps">60.0</span> FPS </a>
       </div>
