--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="BlurWebs">
       <div class="Topnav">
         <a style="font-family: 'Concert One';" class="Active">HOME</a>
-        <a href="Tools/index.html">TOOLS</a>      
+        <a href="Tools/index.html">DOWNLOAD</a>      
         <a href="404_not_found/index.html">GAMES</a>
    <!-- thẻ mở tab mới khi click vào
           <a id="Diễn Đàn" onClick="window.open('main/more/forum', '_nothing');">FORUM</a>
